[gd_scene load_steps=2 format=3 uid="uid://jut3uwfl054l"]

[ext_resource type="Script" uid="uid://hynx03kho7wg" path="res://scenes/skill_contolllers/base_controller.gd" id="1_ox68x"]

[node name="BaseController" type="Node3D"]
script = ExtResource("1_ox68x")

[node name="CastTimer" type="Timer" parent="."]
one_shot = true

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="CastTimer" to="." method="_on_cast_timer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
